--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.10",
     "@tailwindcss/vite": "^4.1.11",
     "clsx": "^2.1.1",
     "lucide-react": "^0.536.0",
